16:00 ソース閲覧用 データ保存に関する操作コーディング中

--- a/WindowsFormsApplication1/WindowsFormsApplication1/卒論.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1/卒論.csproj
@@ -67,6 +67,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="data_file.csv" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
