--- a/WindowsFormsApplication1/WindowsFormsApplication1/Graduate_App.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1/Graduate_App.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{4301B6C7-E0B4-4E63-86B3-DC308F4CB913}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Graduations</RootNamespace>
-    <AssemblyName>Graduations</AssemblyName>
+    <RootNamespace>Graduate_App</RootNamespace>
+    <AssemblyName>Graduate_App</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="File_Communication.cs" />
+    <Compile Include="CSV_Access.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
