--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 *.userosscache
 *.sln.docstates
 
+# User added
+*.docx
+*.txt
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
